# moveit_bigman

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
launch/: main_detection.launch  main_detection.launch~  main_planning.launch  main_planning.launch~
src/: main_planning.cpp
src/detection/: CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h  Detection.cpp  Detection.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelRegistration.cpp  ModelRegistration.h  PnPProblem.cpp  PnPProblem.h  RobustMatcher.cpp  RobustMatcher.h  RootFrame.cpp  RootFrame.h  Utils.cpp  Utils.h  main.cpp  main_detection.cpp  main_registration.cpp
src/test/: capture_image_cv1.cpp  capture_image_pcl.cpp  capture_video_kinect.cpp  capture_video_webcam.cpp  convert_pcd.cpp  extract_object.cpp  fix_organized.cpp  get_linemod_result.cpp  get_object_points.cpp  match_linemod_pcl.cpp  test_depth.cpp  test_kinect.cpp  test_linemod_opencv.cpp  test_linemod_pcl.cpp  test_min_cut_seg.cpp  test_moveit.cpp  test_organized_segmentation.cpp  test_terminal.cpp  test_yaml.cpp  train_linemod.cpp  train_linemod_opencv.cpp
